changes for second revision of the biometrics paper

--- a/report/pers_sched/latex/biometrics_submission/bibliography.bib
+++ b/report/pers_sched/latex/biometrics_submission/bibliography.bib
@@ -9,6 +9,17 @@ year={2015},
 publisher={Elsevier}
 }
 
+@article{lange1989robust,
+  title={Robust statistical modeling using the t distribution},
+  author={Lange, Kenneth L and Little, Roderick JA and Taylor, Jeremy MG},
+  journal={Journal of the American Statistical Association},
+  volume={84},
+  number={408},
+  pages={881--896},
+  year={1989},
+  publisher={Taylor \& Francis Group}
+}
+
 @article{pearson1994mixed,
   title={Mixed-effects regression models for studying the natural history of prostate disease},
   author={Pearson, Jay D and Morrell, Christopher H and Landis, Patricia K and Carter, H Ballentine and Brant, Larry J},
