--- a/report/pers_sched/latex/biometrics_submission/main_manuscript.tex
+++ b/report/pers_sched/latex/biometrics_submission/main_manuscript.tex
@@ -257,7 +257,7 @@ Accepted March} 0000.}
 \input{mainmatter/discussion}
 \section{Supplementary Materials}
 
-Web Appendix A, B, and C, D referenced in Section~\ref{sec : jm_framework}, Section~\ref{subsec : estimation} and Section~\ref{sec : pers_schedule_PRIAS}, respectively, and the R code for fitting the joint model to the PRIAS dataset, and for the simulation study are available with this paper at the Biometrics website on Wiley Online Library.
+Web Appendix A, B, and C, D referenced in Section~\ref{sec : jm_framework}, Section~\ref{subsec : estimation}, and Section~\ref{sec : pers_schedule_PRIAS}, respectively, and the R code for fitting the joint model to the PRIAS dataset, and for the simulation study are available with this paper at the Biometrics website on Wiley Online Library.
 
 
 %  The \backmatter command formats the subsequent headings so that they
