--- a/report/pers_sched/latex/biometrics_submission/replyletter-2/ReplyLetterFirstPage.tex
+++ b/report/pers_sched/latex/biometrics_submission/replyletter-2/ReplyLetterFirstPage.tex
@@ -50,9 +50,9 @@ Erasmus University Medical Center\\PO Box 2040, 3000 CA Rotterdam\\ the Netherla
 
 \opening{Dear Professor Daniels,}
 
-We are writing to you with respect to the manuscript \#BIOM2017609M, titled ``Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients'' submitted to \emph{Biometrics} and the reports we received after its review. We would like to thank you for giving us the opportunity to submit a revised version of our paper that tackles the weaknesses of the previous version.
+We are writing to you with respect to the manuscript \#BIOM2017609M.R1, titled ``Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients'' submitted to \emph{Biometrics} and the reports we received after its review. We would like to thank you for giving us the opportunity to submit a revised version of our paper that tackles the weaknesses of the previous version.
 
-Following the recommendations from the Reviewers, we have made several changes in the revised version of the manuscript. In particular, we updated the joint model fitted to the PRIAS dataset to account for heavy tailed negative residuals evident in the quantile-quantile plot. To this end, we transformed the longitudinal outcome using a $\log_2(\mbox{PSA}+1)$ transformation instead of the original $\log_2{\mbox{PSA}}$ transformation. We have updated the captions of figures and tables to make them more informative. We have also uploaded the R code with example data in a zip file, and moved the Supplementary Materials section to be the last numbered section before Acknowledgments.  The previous version was 20.4 pages long and you have asked us to reduce that to 20 pages (including the body of manuscript, acknowledgments, and references). While we have included new pieces of information according to the suggestions of the reviewers,  we have managed to reduce the length of the paper to 20.4 pages. We hope that this is acceptable. Please find enclosed a detailed point-by-point response to the Reviewers' comments.\\
+Following the recommendations from the Reviewers, we have made several changes in the revised version of the manuscript. In particular, we updated the joint model fitted to the PRIAS dataset to account for heavy tailed negative residuals evident in the quantile-quantile plot. To this end, we transformed the longitudinal outcome using a $\log_2(\mbox{PSA}+1)$ transformation instead of the original $\log_2{\mbox{PSA}}$ transformation. We have updated the captions of figures and tables to make them more informative. We have also uploaded the R code with example data in a zip file, and moved the Supplementary Materials section to be the last numbered section before Acknowledgments.  The previous version was 20.4 pages long and you have asked us to reduce that to 20 pages (including the body of manuscript, acknowledgments, and references). While we have included new pieces of information according to the suggestions of the reviewers,  we have managed to retain the length of the paper up to 20.4 pages. We hope that this is acceptable. Please find enclosed a detailed point-by-point response to the Reviewers' comments.\\
 
 Yours sincerely,
 
