--- a/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
@@ -12,7 +12,7 @@ However, as mentioned earlier, selection of the optimal biopsy time based on $E_
 \label{eq : var_time_survprob}
 \mbox{var}_g(T^*_j) = 2 \int_t^\infty {(u-t) \pi_j(u \mid t, s) \rmn{d} u} - \Big\{\int_t^\infty \pi_j(u \mid t, s) \rmn{d} u\Big\}^2.
 \end{equation}
-Since there is no closed form solution available for the integrals in (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}), we approximate them using Gauss-Kronrod quadrature (see Web Appendix B). The variance depends both on last biopsy time $t$ and PSA history $\mathcal{Y}_j(s)$, as demonstrated in Section \ref{subsec : demo_prias_pers_schedule}.
+Since there is no closed form solution available for the integrals in (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}), we approximate them using Gauss-Kronrod quadrature (see Web Appendix B). The variance depends both on the last biopsy time $t$ and the PSA history $\mathcal{Y}_j(s)$, as demonstrated in Section \ref{subsec : demo_prias_pers_schedule}.
 
 For schedules based on dynamic risk of GR, the choice of threshold $\kappa$ has important consequences because it dictates the timing of biopsies. Often it may depend on the amount of risk that is acceptable to the patient (if maximum acceptable risk is 5\%, $\kappa = 0.95$). When $\kappa$ cannot be chosen on the basis of the input of the patients, we propose to automate its choice. More specifically, given the time $t$ of latest biopsy we propose to choose a $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints}, discriminating between cases (patients who experience GR) and controls, is maximized. In joint models, a patient $j$ is predicted to be a case in the time window $\Delta t$ if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$, or a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep*{rizopoulosJMbayes, landmarking2017}. We choose $\Delta t$ to be one year. This is because, in AS programs at any point in time, it is of interest to identify and provide extra attention to patients who may obtain GR in the next one year. As for the choice of the binary classification accuracy measure, we chose $\mbox{F}_1$ score since it is in line with our goal to focus on potential cases in time window $\Delta t$. The $\mbox{F}_1$ score combines both sensitivity and positive predictive value (PPV) and is defined as:
 \begin{align*}
