--- a/report/pers_sched/latex/biometrics_submission/supplementary/source_code.tex
+++ b/report/pers_sched/latex/biometrics_submission/supplementary/source_code.tex
@@ -1,8 +1,3 @@
 % !TEX root =  ../supplementary.tex
 \section{Source Code}
-The source code for the joint model fitted to the PRIAS data set can be found at:\\
-\url{https://goo.gl/phQkxG}\\
-The source code for the simulation study can be found at:\\
-\url{https://goo.gl/TpLTM8}\\
-A README file explaining the usage of the code can be found at:\\
-\url{https://goo.gl/h2pAep}.\\
+The R code for fitting the joint model to the PRIAS dataset, and for the simulation study, along with sample dataset are available with this paper at the Biometrics website on Wiley Online Library.
